apps/cli/crates/onequery-cli/src/presentation/snapshots/oneq__presentation__api_failure__tests__rendered_transport_error_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: org list failed
Command: oneq org list
Stage: http
Why: failed to reach org list endpoint: operation timed out
Try:
  - retry oneq org list
