apps/cli/crates/onequery-cli/src/presentation/snapshots/oneq__presentation__api_failure__tests__rendered_unauthorized_problem_guides_org_reauth_snapshot.snap
---
source: crates/onequery-cli/src/presentation/api_failure.rs
expression: "render_error(&error, EffectiveOutputMode::Text)"
---
Error: Forbidden
Command: oneq org list
Stage: auth
Why: this account can no longer access the org list
Request ID: req_org_auth
Hint: refresh your session and retry
Try:
  - oneq auth login
